kubernetes/istio-ingress/istio-config/vsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demoapp
spec:
  hosts:
    - '*'
  gateways:
    - app-gateway
  http:
    - route:
        - destination:
            host: flaskapp.prod.svc.cluster.local
          weight: 70
        - destination:
            host: flaskapp.stage.svc.cluster.local
          weight: 20
        - destination:
            host: flaskapp.dev.svc.cluster.local
          weight: 10
